<resources>
    <string name="app_name">My Application</string>
    <string name="Name">Name</string>
    <string name="Age">age</string>
    <string name="EMail">E-mail</string>
    <string name="Password">Password</string>
    <string name="Register">Register</string>
    <string name="Back">Back</string>
    <string name="Select">Select</string>
    <string name="Welcome">Welcome to  my Application!</string>
    <string name="Welcome1">Mobile Application 13011212 Kim Duk Young</string>
    <string name="title_activity_nav">NavActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="computer_engineer">Computer Engineer</string>
    <string name="doctor">Doctor</string>
    <string name="banker">Banker</string>
    <string name="choose">Choose</string>
    <string name="title_activity_tabbed">Tabbed</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
</resources>
